完成初步联调

--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -16,17 +16,17 @@
   </filter-mapping>
 
   <servlet>
-    <servlet-name>DengluServlet</servlet-name>
-    <servlet-class>com.servlet.DengluServlet</servlet-class>
+    <servlet-name>MainServlet</servlet-name>
+    <servlet-class>com.servlet.MainServlet</servlet-class>
   </servlet>
 
 
   <servlet-mapping>
-    <servlet-name>DengluServlet</servlet-name>
-    <url-pattern>/DengluServlet</url-pattern>
+    <servlet-name>MainServlet</servlet-name>
+    <url-pattern>/MainServlet</url-pattern>
   </servlet-mapping>
 
   <welcome-file-list>
-    <welcome-file>denglu.jsp</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
 </web-app>
